--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
-    <script src="game.js"></script>
+    <div class = "rps">
+        <div id = "title"> 
+            <h1>Rock Paper Scissors</h1>
+        </div>
+        <div id = "game">
+            <h2 id = "result">Choose your weapon</h2>
+            <h3 id = "explain">First to score 5 points wins the game</h3>
+            <div>
+                <p id = "playerScore">Player: </p>
+                <p id = "computerScore">Computer: </p>
+            </div>
+            <button id = "rock">Rock</button>
+            <button id = "paper">Paper</button>
+            <button id = "scissors">Scissors</button>
+        </div>
+        <script src="game.js"></script>
+    </div>
 </body>
 </html>
