added the functionality of the app

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
             <h1>Rock Paper Scissors</h1>
         </div>
         <div id = "game">
-            <h2 id = "result">Choose your weapon</h2>
+            <h2>Choose your weapon</h2>
             <h3 id = "explain">First to score 5 points wins the game</h3>
             <div>
-                <p id = "playerScore">Player: </p>
-                <p id = "computerScore">Computer: </p>
+                <p id = "playerScore">Player:</p>
+                <p id = "computerScore">Computer:</p>
             </div>
+            <p id = "result"></p>
             <button id = "rock">Rock</button>
             <button id = "paper">Paper</button>
             <button id = "scissors">Scissors</button>
